# CallOfFerris

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
ggez-goodies/: Cargo.toml
ggez-goodies/src/: bitmap_font.rs  camera.rs  lib.rs  particle.rs
resources/maps/: 01.map
resources/shaders/: dim.basic.glslf  dim.glslf
src/: dead.rs  game.rs  main.rs  map.rs  menu.rs  physics.rs  utils.rs
src/components/: barrel.rs  bullet.rs  cloud.rs  enemy.rs  player.rs  tile.rs
src/screens/: mod.rs
src/screens/dead/: dead.rs  mod.rs
src/screens/game/: game.rs  map.rs  mod.rs  physics.rs
src/screens/game/components/: barrel.rs  bullet.rs  cloud.rs  enemy.rs  mod.rs  player.rs  tile.rs
src/screens/menu/: menu.rs  mod.rs
