[package]
name = "call_of_ferris"
version = "0.1.0"
authors = ["Anhad Singh <andypythonappdeveloper@gmail.com>"]
description = """
A thrilling action game where your favorite Ferris the crab and the rust mascot got guns and has taken up the duty to find evildoer languages while managing to keep itself alive. 
Take part in this awesome adventure and help Ferris be the best ever!
"""
repository = "https://github.com/Andy-Python-Programmer/CallOfFerris"
edition = "2018"

[dependencies]
ggez = "0.5"
rand = "0.7"
ggez-goodies = { git = "https://github.com/ggez/ggez-goodies" }
nalgebra-glm = "0.9.0"
gfx = "0.18.2"
